--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
               @add-tick="addTick"
               @remove-tick="removeTick"
               @open-file="openFile"
+              ref="fileItem"
             ></file-item>
           </template>
           <div class="divider"></div>
