--- a/index.html
+++ b/index.html
@@ -128,31 +128,44 @@
           </div>
         </div>
         <div class="panel-body form-group" v-if="viewEdit">
-          <template v-for="(item, key, index) in unsaved" v-if="item && item.type">
+          <template v-for="key in unsaved.order">
             <input-header :label-for="'value-' + key" 
               :title="key" 
               :removable="key != 'Title' && key != 'Content' && key != 'Categories'"
               @remove="removeField(key)"></input-header>
-            <textarea class="form-input" v-if="item.type == 'multiple'" :id="'value-' + key" v-model="item.content" :placeholder="key"></textarea>
-            <input class="form-input" v-else-if="item.type == 'single'" v-model="item.content" :id="'value-' + key" :placeholder="key">
-            <div v-else-if="item.type == 'tags'">
-              <span class="chip" v-for="tag in item.content">
+            <textarea class="form-input" v-if="unsaved[key].type == 'multiple'" :id="'value-' + key" v-model="unsaved[key].content" :placeholder="key"></textarea>
+            <input class="form-input" v-else-if="unsaved[key].type == 'single'" v-model="unsaved[key].content" :id="'value-' + key" :placeholder="key">
+            <div v-else-if="unsaved[key].type == 'tags'">
+              <span class="chip" v-for="tag in unsaved[key].content">
                 {{ tag }}&nbsp;
                 <span class="mdi mdi-close" aria-label="Close" role="button" @click="removeTag(key, tag)"></span>
               </span>
               <input class="form-input" type="text" :id="'value-' + key" :placeholder="key" @keydown="updateTags($event, key)">
             </div>
-            <input-datetime v-else-if="item.type == 'datetime'" :id="'value-' + key" v-model="item.content"></input-datetime>
+            <input-datetime v-else-if="unsaved[key].type == 'datetime'" :id="'value-' + key" v-model="unsaved[key].content"></input-datetime>
           </template>
           
-          <div class="tile tile-centered mt-2" @click="toggleNewFieldEntry" v-if="Object.keys(unsaved).length > 0">
-            <div class="tile-content text-center">
-              <div class="mdi mdi-24px mdi-plus"></div>
+          <div class="navbar">
+            <div class="navbar-section tile tile-centered mt-2 tooltip tooltip-top" 
+              data-tooltip="Add new field"
+              @click="toggleNewFieldEntry" 
+              v-if="Object.keys(unsaved).length > 0">
+              <div class="tile-content text-center">
+                <div class="mdi mdi-24px mdi-plus"></div>
+              </div>
+            </div>
+            <div class="navbar-section tile tile-centered mt-2 tooltip tooltip-top" 
+              data-tooltip="Sort fields"
+              @click="$refs.modalSortFields.toggle()" 
+              v-if="Object.keys(unsaved).length > 0">
+              <div class="tile-content text-center">
+                <div class="mdi mdi-24px mdi-sort"></div>
+              </div>
             </div>
           </div>
 
           <div class="modal" ref="modalNewField">
-            <div class="modal-overlay" aria-label="Close"></div>
+            <div class="modal-overlay" aria-label="Close" @click="toggleNewFieldEntry"></div>
             <div class="modal-container">
               <div class="modal-body form-group">
                 <label class="divider" for="newfieldname" data-content="Field name"></label>
@@ -182,17 +195,20 @@
               </div>
             </div>
           </div>
+
+          <modal-sortfields ref="modalSortFields" v-model="unsaved.order"></modal-sortfields>
+
         </div>
         <div class="panel-body form-group" v-else>
-          <template v-for="(item, key, index) in unsaved" v-if="item && item.type">
+          <template v-for="key in unsaved.order">
             <input-header :title="key" :removable="false"></input-header>
-            <div class="display-input" v-if="item.type == 'multiple' || item.type == 'single'" v-html="mdconverter.makeHtml(item.content)"></div>
-            <div v-else-if="item.type == 'tags'" class="display-input">
-              <span class="chip" v-for="tag in item.content">
+            <div class="display-input" v-if="unsaved[key].type == 'multiple' || unsaved[key].type == 'single'" v-html="mdconverter.makeHtml(unsaved[key].content)"></div>
+            <div v-else-if="unsaved[key].type == 'tags'" class="display-input">
+              <span class="chip" v-for="tag in unsaved[key].content">
                 {{ tag }}
               </span>
             </div>
-            <display-datetime v-else-if="item.type == 'datetime'" :value="item.content"></display-datetime>
+            <display-datetime v-else-if="unsaved[key].type == 'datetime'" :value="unsaved[key].content"></display-datetime>
           </template>
         </div>
         <div class="panel-footer">
