add empty tile beneath note list for drag and drop purpose

--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
             ></file-item>
           </template>
           <div class="divider"></div>
+          <file-item :index="stored.noteList.length"></file-item>
         </div>
         <div class="panel-footer navbar" v-show="tickedFiles.length > 0">
           <div class="navbar-section">
