update ratio of note list and note display

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </div>
 
     <div class="content columns" id="note-list-and-display">
-      <div class="list-container column col-6 col-sm-12 panel">
+      <div class="list-container column col-4 col-md-12 panel">
         <div class="panel-header">
           <div class="panel-title navbar">
             <div class="navbar-section">
@@ -134,7 +134,8 @@
           <button class="btn ml-1">Export</button>
         </div>
       </div>
-      <div class="note-container column col-6 col-sm-12 panel">
+
+      <div class="note-container column col-8 col-md-12 panel">
         <div class="panel-nav">
           <div class="tab tab-block" ref="viewSwitcher">
             <div class="tab-item active" @click="switchView" ref="viewView">
