add animated search bar and an icon for filter

--- a/index.html
+++ b/index.html
@@ -92,11 +92,8 @@
         <div class="panel-header">
           <div class="panel-title navbar">
             <div class="navbar-section">
-              <div class="form-input search-bar">
-                <span class="form-icon mdi mdi-magnify"></span>
-                <input type="text" class="invisible-form-input">
-                <span class="form-icon mdi mdi-close tooltip tooltip-bottom" data-tooltip="clear search entry"></span>
-              </div>
+              <div class="mdi mdi-24px mdi-filter-outline"></div>
+              <search-bar></search-bar>
             </div>
             <div class="my-button c-hand mdi mdi-24px mdi-plus" @click="addNewNote"></div>
           </div>
