--- a/index.html
+++ b/index.html
@@ -105,6 +105,24 @@
               Click <i class="mdi mdi-plus"></i> to add note
             </div>
           </template>
+          <template v-else-if="filter.group!=''">
+            <template v-for="s in filter.show">
+              <div class="divider"></div>
+              <div>{{ s }}</div>
+              <template v-for="(f,i) in stored.noteList" v-if="f[filter.group] && f[filter.group].content.includes(s)">
+                <div class="divider"></div>
+                <file-item
+                  :file="f"
+                  :index="i"
+                  @add-tick="addTick"
+                  @remove-tick="removeTick"
+                  @open-file="openFile"
+                  ref="fileItem"
+                ></file-item>
+              </template>
+
+            </template>
+          </template>
           <template v-else v-for="(f,i) in stored.noteList">
             <div class="divider"></div>
             <file-item
