disable export button

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             <button class="btn" @click="discardSelection">Discard selection</button>
           </div>
           <button class="btn ml-1" @click="deleteNotes">Delete</button>
-          <button class="btn ml-1">Export</button>
+          <!-- <button class="btn ml-1">Export</button> -->
         </div>
       </div>
 
