use production library (.min)

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <meta name="description" content="Mardown supported note keeper">
     <meta name="keywords" content="manote, markdown note, markdown, note, keeping note">
     <link rel="icon" type="image/png" href="icons/icon.png?v=1.0">
-    <link rel="stylesheet" href="css/spectre.css">
+    <link rel="stylesheet" href="css/spectre.min.css">
     <link rel="stylesheet" href="css/materialdesignicons.min.css">
     <link rel="stylesheet" href="css/md-themes.css">
     <link rel="stylesheet" href="css/custom.css">
     <script src="js/showdown.min.js"></script>
-    <script src="js/vue.js"></script>
+    <script src="js/vue.min.js"></script>
     <script src="js/google-drive-access.js"></script>
   </head>
 
