add archive function

--- a/desktop/index.html
+++ b/desktop/index.html
@@ -49,6 +49,9 @@
           @save-note="saveNote"
           @discard-unsaved="discardUnsaved"
           @rename="renameOpenedFile"
+          @setDefault
+          @setGlobalDefault
+          @archive="archive"
         ></note-container>
       </div>
 
