add ability to set default for folder scope and global scope

--- a/desktop/index.html
+++ b/desktop/index.html
@@ -49,8 +49,8 @@
           @save-note="saveNote"
           @discard-unsaved="discardUnsaved"
           @rename="renameOpenedFile"
-          @setDefault
-          @setGlobalDefault
+          @set-default="setDefault"
+          @set-global-default="setGlobalDefault"
           @archive="archive"
         ></note-container>
       </div>
